--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-markdown": "^9.0.1",
     "sonner": "^1.4.2",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
